# fluffy-eureka

./: .env.sample  .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
app/: .env.sample  main.py
app/models/: models.py
backend/: Dockerfile  pyproject.toml
backend/article_app/: models.py  serializers.py  urls.py  views.py
backend/backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/vacancy_app/: analyzer.py  base_parser.py  crud.py  getmatch_parser.py  hh_parser.py  model_managers.py  models.py  run_parsers.py  serializers.py  urls.py  views.py
frontend/: Dockerfile  error.vue  nuxt.config.ts  package-lock.json  package.json
frontend/assets/css/: base.css
frontend/components/: TheBody.vue  TheFooter.vue  TheNavigation.vue  TheTelegramAd.vue  VacancyListItem.vue
frontend/layouts/: default.vue  post.vue
frontend/pages/: app.vue  index.vue
frontend/pages/post/: [id].vue  index.vue
frontend/pages/statistic/: index.vue
frontend/pages/vacancy/: [id].vue  index.vue
frontend/server/api/: apiv1.js
